@@ -11,6 +11,8 @@ https://github.com/elastic/apm-server/compare/9e0a1e281e56044745f1a4f18dcbf00a7f
 
 ==== Bug fixes
 
+- Don't augment payloads with invalid IPs {pull}923[923], {pull}927[927].
+
 ==== Added
 
 - Listen on default port 8200 if unspecified {pull}[886]886.
